# deepcobot

./: .gitignore  README.md  README_CN.md  config.example.cn.toml  config.example.toml  debug_run.py  pyproject.toml
deepcobot/: __init__.py  __main__.py
deepcobot/agent/: __init__.py  approval.py  builder.py  core.py  factory.py  prompts.py  session.py  utils.py
deepcobot/agent/mcp/: __init__.py  tools.py
deepcobot/bus/: __init__.py  queue.py
deepcobot/channels/: __init__.py  base.py  cli_channel.py  dingtalk.py  discord.py  events.py  feishu.py  manager.py  telegram.py  web.py
deepcobot/cli/: __init__.py  app.py  bot.py  commands.py  config_cmd.py  context.py  cron.py  i18n.py  run.py  serve.py
deepcobot/config/: __init__.py  loader.py  schema.py
deepcobot/cron/: __init__.py  heartbeat.py  service.py  types.py
deepcobot/server/: __init__.py  graph.py
deepcobot/services/: __init__.py  graceful.py  health.py  heartbeat.py  metrics.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: configuration.md  deployment.md
tests/: conftest.py  test_agent.py  test_bus.py  test_channels.py  test_config.py  test_create_agent.py
