[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepcobot"
version = "0.1.0"
description = "DeepCoBot - 极简封装的个人 AI 助理框架，基于 DeepAgents SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DeepCoBot Team" }
]
keywords = [
    "ai",
    "assistant",
    "agent",
    "langgraph",
    "deepagents",
    "chatbot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "deepagents>=0.4",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "loguru>=0.7",
    "tomli>=2.0; python_version < '3.11'",
    "rich>=13.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.3"]
feishu = ["lark-oapi>=1.0"]
dingtalk = ["dingtalk-stream>=1.0"]
web = ["fastapi>=0.100", "uvicorn>=0.23", "sse-starlette>=1.6"]
cron = ["croniter>=1.3"]
metrics = ["prometheus-client>=0.17"]
all = [
    "deepcobot[telegram,discord,feishu,dingtalk,web,cron,metrics]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
deepcobot = "deepcobot.cli.commands:app"

[project.urls]
Homepage = "https://github.com/deepcobot/deepcobot"
Documentation = "https://github.com/deepcobot/deepcobot#readme"
Repository = "https://github.com/deepcobot/deepcobot"
Issues = "https://github.com/deepcobot/deepcobot/issues"

[tool.hatch.build.targets.wheel]
packages = ["deepcobot"]

[tool.hatch.build.targets.sdist]
include = [
    "/deepcobot",
    "/tests",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["deepcobot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "discord.*",
    "lark_oapi.*",
    "dingtalk.*",
    "langgraph.*",
    "deepagents.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"